# colophon

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  SPEC.md  pyproject.toml
calibre-plugin/: __init__.py  _run_repair_test.py  about.txt  book_data.py  build.py  config.py  embed.py  host_runner.py  requirements-vendor.txt  ui.py  worker.py
colophon/: __init__.py  cli.py  config.py  font_obfuscation.py  interactive.py  pipeline.py  report.py  validator.py
colophon/models/: llm_adapter.py  model_info.py  spacy_detector.py
colophon/stages/: __init__.py  analysis.py  chapter_detect.py  coherence.py  collection.py  css_sanitize.py  html_repair.py  opf_utils.py  repack.py  text_cleanup.py  toc_rebuild.py  unpack.py
tests/: test_analysis.py  test_chapter_detect.py  test_cli.py  test_coherence.py  test_collection.py  test_css_sanitize.py  test_font_obfuscation.py  test_html_repair.py  test_interactive.py  test_llm_adapter.py  test_model_info.py  test_public_domain_fixtures.py  test_qa_fixtures.py  test_text_cleanup.py  test_toc_rebuild.py  test_validator.py
tests/fixtures/: README.md  coherence-cases.jsonl
tests/fixtures/public-domain/: corpus.json  fetch.py  make_seeds.py  pd-broken-toc-epub2.epub  pd-clean-epub3.epub
