[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "colophon"
version = "0.1.0"
description = "AI-assisted EPUB repair pipeline"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["epub", "ebook", "repair", "ocr", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Markup :: XML",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.1",
    "beautifulsoup4>=4.12",
    "html5lib>=1.1",
    "lxml>=5.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "spacy>=3.7",
    "litellm>=1.40",
    "langdetect>=1.0.9",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
colophon = "colophon.cli:main"

[project.urls]
Homepage = "https://github.com/colophon-epub/colophon"
Issues = "https://github.com/colophon-epub/colophon/issues"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
